2007-03-14  Chris Toshok  <toshok@ximian.com>

	* Form.cs: go ahead and remove the RecreateHandles that jpobst
	removed earlier and I had him add back it.  It turns out metacity
	*does* in fact handle the MOTIF_WM_HINTS property changing, it
	just doesn't redraw the window titlebar until you resize the
	window.  This also means we aren't recreating the entire window
	hierarchy on X when you change this property.  And it looks better
	on windows, too.

2007-03-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItem.cs:
	* ListView.cs: Collecting selection information
	is now done in SelectedIndexCollection rather than in
	SelectedListViewItemCollection. This is done so we can
	have the selection information code in one single place
	(virtual mode selection information entirely depends on
	SelectedIndexCollection).

2007-03-13  Miguel de Icaza  <miguel@novell.com>

	* ErrorProvider.cs: Add stubs for ISupportInitialize

2007-03-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListViewItem.cs: Trigger the ItemCheck and ItemChecked events
	in the right order with the right values, from the Checked property, 
	just as MS does (instead of triggering them from ListView).

	* ListView.cs: Make OnItemCheck and OnItemChecked internal.

2007-03-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Implement ItemChecked 2.0 event. Also cast to 
	the correct handler in OnItemCheck method (ItemCheckEventHandler 
	instead of EventHandler). This used to throw an InvalidCastException.

2007-03-13  Jackson Harper  <jackson@ximian.com>

	* TextBoxBase.cs: Calculate the document before the handle is
	created, so there isn't an extra invalidate called.

2007-03-13  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Don't set owner in ShowDialog until we are sure
	that we aren't going to throw an exception.  [Fixes bug #80773]

2007-03-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TreeView.cs: Make it compile.
